<resources>
    <string name="app_name">Scordz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="by_logic_realm">By Logic Realm</string>

    <string name="round">No</string>
    <string name="delete">Delete</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="round_num">1</string>
    <string name="result1">Team 1: 0</string>
    <string name="result2">Team 2: 0</string>
    <string name="_u">-</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
</resources>