<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dayBack">

    <GridLayout
        android:id="@+id/gameDataTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:columnCount="4"
        android:background="@color/dayBack">

        <TextView
            android:id="@+id/roundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/round_num"
            android:textColor="@color/dayText"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/team1Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="2"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/team1"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColor="@color/dayText"
            android:textColorHint="@color/hintText"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/team2Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="2"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/team2"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColor="@color/dayText"
            android:textColorHint="@color/hintText"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_marginStart="5dp"
            android:backgroundTint="#D32F2F"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            app:cornerRadius="20dp" />
    </GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />
</LinearLayout>
